--- a/web-app/templates/ficheiros.html
+++ b/web-app/templates/ficheiros.html
@@ -11,8 +11,14 @@
     <h2>Lista de Ficheiros no Container</h2>
     <ul class="list-group">
         {% for ficheiro in ficheiros %}
-        <li class="list-group-item">
-            <a href="{{ sas_base }}/{{ ficheiro }}?{{ sas_token }}" target="_blank">{{ ficheiro }}</a>
+        <li class="list-group-item d-flex justify-content-between align-items-center">
+            <div>
+                <a href="{{ sas_base }}/{{ ficheiro }}?{{ sas_token }}" target="_blank">{{ ficheiro }}</a>
+            </div>
+            <form action="{{ url_for('apagar_ficheiro') }}" method="post" class="mb-0">
+                <input type="hidden" name="ficheiro" value="{{ ficheiro }}">
+                <button type="submit" class="btn btn-danger btn-sm">Apagar</button>
+            </form>
         </li>
         {% endfor %}
     </ul>
